<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="ST_InfoDataFB" Id="{43e00206-d811-48b6-bb25-970aceacb73e}">
    <Declaration><![CDATA[TYPE ST_InfoDataFB :
STRUCT
	usiMapState	:USINT;
	uiMapDiag	:USINT;
	usiDummy	:USINT;
END_STRUCT
END_TYPE]]></Declaration>
  </DUT>
</TcPlcObject>